2009-06-14  Ben Abbott <bpabbott@mac.com>

	* plot/plotyy.m: Fix compatibility with subplot, add listeners for
	dataaspectratio, and add a demo.

2009-06-14  Eric Chassande-Mottin <echassandemottin@gmail.com>

	* plot/plotyy.m: Correct behavior when there is no currentfigure.

2009-06-14  Jaroslav Hajek  <highegg@gmail.com>

	* set/ismember.m: Reimplement using lookup & unique.

2009-06-11  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: Fix logic associated with 'have_ghostscript'.
	* plot/gnuplot_drawnow.m: Add support for pdfcairo and pngcairo
	terminals. Minor code improvements.
	* plot/print.m: Associate '-mono' with devices ps, ps2, eps, & eps2.
	Have '-mono' render all objects in monochrome.
	For pdf or png output, favor gnuplot's cairo terminals.

2009-06-10  Marco Caliari <marco.caliari@univr.it>

	* plot/hold.m: Add demo including a hggroup.
	* plot/__go_draw_axes__.m: Fix order when pushing group children onto
	the axes kid list.
	* general/quadgk.m: Better waypoint transform.

2009-06-09  David Bateman  <dbateman@free.fr>

	* general/quadgk.m: Add test case and fixed doubly infinite 
	waypoint transform for x = 0 case.

2009-06-09  Marco Caliari <marco.caliari@univr.it>

	* general/quadgk.m: Fix doubly infinite transformation to the finite
	interval.

2009-06-08  Ben Abbott <bpabbott@mac.com>

	* plot/axis.m: Fix bug for 'axis tight' with multiple lines, modify
	demo.

2009-06-07  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* testfun/assert.m: Fix texinfo bug.

2009-06-04  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Change strncmpi(scale,'lo') to 
	strcmp(scale,'log').
	* plot/__go_draw_axes__.m: For log-scale axes use format '10^{%T}'.

2009-06-03  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m: Colorbar 'handlevisibility' should be 'on'.
	Add additional demos which illustrate problems with the present
	implementation.
	* plot/__gnuplot_has_feature__.m: Change version for 
	"x11_figure_position" from ">=4.3.0" to ">=4.2.5".